# The-PDF-Bond

./: .gitignore  .replit  DEPLOY_INSTRUCTIONS.md  NETLIFY.md  NETLIFY_DEPLOYMENT.md  README.md  api_keys.json  fixed_requirements.txt  index.html  main.py  netlify.sh  netlify.toml  package-lock.json  pyproject.toml  requirements.txt  vite.config.js  zip-project.js  zip-project.sh  zip_project.py
.upm/: store.json
attached_assets/: .replit  CNDK_BENEFIT_SUMMARY_tables.xlsx  Chat GPT summary extraction training.docx  DEPLOY_INSTRUCTIONS.md  Health Benefits PDF Data Extraction Guide.docx  MASS_UPLOAD_TEMPLATE_EB3 (11).xlsx  Pasted--workspace-workspace-Resolve-any-merge-conflicts-if-they-occur-workspace-Then-commit--1745146771768.txt  README.md  api.js  api.py  api_keys.html  benefit_extraction.html  benefit_extractor.py  main.py  netlify.sh  netlify.toml  results.html
downloads/: AFA_CPOSII_1000_80_50__0LXR_CY_V23_1-1-2024_extracted.txt  AFA_CPOSII_1000_80_50__0LXR_CY_V23_1-1-2024_tables.xlsx  CNDK_BENEFIT_SUMMARY_extracted.txt  CNDK_BENEFIT_SUMMARY_tables.xlsx  benefits_extraction_20250419_132552.xlsx  benefits_extraction_20250419_133014.xlsx
outputs/: AFA CPOSII 1000 80 50 _0LXR CY V23 (1-1-2024)_extracted.txt  AFA CPOSII 1000 80 50 _0LXR CY V23 (1-1-2024)_results.json  CNDK BENEFIT SUMMARY_results.json  CNDK_BENEFIT_SUMMARY_extracted.txt  CNDK_BENEFIT_SUMMARY_results.json  POS - O_extracted.txt  POS - O_results.json  SBC-2024-IVL-TX_HMO_Gold-S_extracted.txt  SBC-2024-IVL-TX_HMO_Gold-S_results.json
src/: App.css  App.jsx  index.css
static/: api-keys.html  (+4 more)
(+34 files in other folders)
